hphp/hack/test/typecheck/reactive/await_in_rx5.php
<?hh // strict

<<__Rx>>
async function f(): Awaitable<int> {
  return 1;
}

<<__Rx>>
async function g(): Awaitable<void> {
  // ERROR
  $l = array(f(), f());
  $a = await gena($l);
}
